<resources>
    <string name="app_name">Movie Catalogue</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_movies">Movies</string>
    <string name="title_tv_shows">Tv Shows</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="duration">Duration</string>
    <string name="user_score">User Score</string>
    <string name="imdb">IMDb</string>
    <string name="status">Status</string>
    <string name="release_information">Release Information</string>
    <string name="language">Language</string>
    <string name="genre">Genre</string>
    <string name="revenue">Revenue</string>
    <string name="overview">Overview</string>
    <string name="type">Type</string>
    <string name="released">Released</string>
    <string name="english">English</string>
    <string name="scripted">Scripted</string>
</resources>
